# nix-audit

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  flake.nix
src/: main.rs  types.rs
src/checkers/: cache_alignment.rs  docker_layers.rs  follows_chain.rs  ifd_avoidance.rs  mod.rs  nixpkgs_pin.rs  source_filter.rs  version_stability.rs
src/convergence/: dashboard.rs  metrics.rs  mod.rs  store.rs
src/fix/: auto_fix.rs  mod.rs  patch_generator.rs
src/flake_lock/: drift.rs  mod.rs  nixpkgs_counter.rs  parser.rs
